tests/errors/arguments/variables/invalid_frame_05.src
.IPPcode18
defvar gf@var